force-app/main/default/objects/CategoryRule__c/CategoryRule__c.object-meta.xml
<CustomObject>
    <description>Defines which objects and positions have file categories</description>
    <label>Category Rule</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Category Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>