force-app/main/default/objects/CategoryRule__c/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>Groups that can view files with this category.</description>
    <label>Group</label>
    <length>32</length>
    <type>Text</type>
</CustomField>