force-app/main/default/objects/CategoryRule__c/fields/GroupName__c.field-meta.xml
<CustomField>
    <fullName>GroupName__c</fullName>
    <description>Members of this group have access to this category.  If no groups are specified, only System Admins can see files with this category</description>
    <label>Group</label>
    <length>128</length>
    <type>Text</type>
</CustomField>