force-app/main/default/objects/CategoryRule__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <description>Object name</description>
    <inlineHelpText>If the object name is part of a managed package, include its namespace (i.e. atlas1__)</inlineHelpText>
    <label>Object</label>
    <length>128</length>
    <required>true</required>
    <type>Text</type>
</CustomField>