force-app/main/default/objects/CategoryRule__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>Position value if applicable</description>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Positions</valueSetName>
    </valueSet>
</CustomField>