force-app/main/default/objects/CategoryRule__c/fields/ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>ReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User cannot upload a file with this object/category, if true, user can only view and update files with this category</description>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>