force-app/main/default/objects/CategoryRule__c/fields/Upload__c.field-meta.xml
<CustomField>
    <fullName>Upload__c</fullName>
    <defaultValue>false</defaultValue>
    <description>User can upload a file with this object/category, if true, user can only view and update files with this category.
        Deprecated in favor of ReadOnly.
    </description>
    <label>Upload</label>
    <type>Checkbox</type>
</CustomField>