force-app/main/default/objects/CategoryRule__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>GroupName__c</columns>
    <columns>Object__c</columns>
    <columns>Position__c</columns>
    <columns>ReadOnly__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>